--- a/templates/About_us.html
+++ b/templates/About_us.html
@@ -106,7 +106,7 @@
                 <!-- single member -->
                 <div class="col-lg-3 col-md-6">
                     <div class="member text-center">
-                      <h3>Yasar Shaik</h3>
+                      <h3>Shaik Yasar</h3>
                         
                         <div class="m_text">
                             
@@ -138,11 +138,11 @@
                         </div>
                         <div class="m_menu">
                           <ul class="list-inline">
-                            <li class="list-inline-item"><a href="mailto:" target="_blank" ><i class="fa fa-envelope" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="mailto:syedminhaz42@gmail.com" target="_blank" ><i class="fa fa-envelope" style="font-size:30px"></i></a></li>
 
-                            <li class="list-inline-item"><a href=""  target="_blank"><i class="fa fa-github" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/Minhaj1814"  target="_blank"><i class="fa fa-github" style="font-size:30px"></i></a></li>
 
-                            <li class="list-inline-item"><a href="" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/Minhaj1814" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
 
                             <li class="list-inline-item"><a href="" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a></li>
                           </ul>
@@ -160,13 +160,13 @@
                         </div>
                         <div class="m_menu">
                           <ul class="list-inline">
-                            <li class="list-inline-item"><a href="mailto:" target="_blank"><i class="fa fa-envelope" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="mailto:abhiabhinav0405@gmail.com" target="_blank"><i class="fa fa-envelope" style="font-size:30px"></i></a></li>
 
-                            <li class="list-inline-item"><a href=""  target="_blank"><i class="fa fa-github" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/abhi040503"  target="_blank"><i class="fa fa-github" style="font-size:30px"></i></a></li>
 
-                            <li class="list-inline-item"><a href="" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/abhinav-thadepally-315650245" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
 
-                            <li class="list-inline-item"><a href="" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="https://instagram.com/_a_b_h_i_0405?igshid=NDU3Y2E5ZmY=" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a></li>
                           </ul>
                         </div>
                     </div>
