--- a/templates/About_us.html
+++ b/templates/About_us.html
@@ -142,7 +142,7 @@
 
                             <li class="list-inline-item"><a href="https://github.com/Minhaj1814"  target="_blank"><i class="fa fa-github" style="font-size:30px"></i></a></li>
 
-                            <li class="list-inline-item"><a href="https://github.com/Minhaj1814" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/minhaj-syed-84504621a" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a></li>
 
                             <li class="list-inline-item"><a href="" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a></li>
                           </ul>
